--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           position="0 0 -1"
           radius-inner= "0.02"
           radius-outer= "0.03"
-          material="color: #fadaed; shader: flat">
+          material="color: #fF69B4; shader: flat">
         </a-ring>
       </a-camera>
       
